# SapphireUI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cleanup.sh  dev.sh  main.py  pyproject.toml  requirements.txt  run.sh  rxconfig.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  development.yml  publish.yml
.trunk/: trunk.yaml
SapphireUI/: SapphireUI.py  config.py  export.py
SapphireUI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SapphireUI/components/: layout.py
SapphireUI/landing/: hero.py
SapphireUI/start/: SapphireUI.py  changelog.py  charting.py  clientstate.py  dashboard.py  installation.py  introduction.py  style.py  theming.py
SapphireUI/static/: indexer.py  meta.py  routes.py  scripts.py
assets/: chakra_color_mode_provider.js
assets/css/: globals.css  wrapper.css
cli/: main.py
docs/: EXPORT.md
docs/charts/: area_chart.md  bar_chart.md  doughnut_chart.md  line_chart.md  pie_chart.md  radar_chart.md  scatter_chart.md
docs/components/: accordion.md  avatar.md  badge.md  breadcrumb.md  button.md  checkbox.md  collapsible.md  context_menu.md  dialog.md  input.md  input_group.md  kbd.md  link.md  menu.md  popover.md  scroll_area.md  select.md  skeleton.md  slider.md  tabs.md  textarea.md  theme_switcher.md  toggle.md  toggle_group.md  tooltip.md  typography.md
docs/getting_started/: changelog.md  charting.md  cli.md  client_state_var.md  dashboard.md  installation.md  introduction.md  tailwind_cn.md  theming.md  who_is_buridan.md  who_is_sapphire.md
docs/javascript_integrations/: fuse_js.md  minisearch_js.md  quill_js.md
docs/wrapped_components/: react_countup.md  react_spinner.md  react_typed.md  simple_icon.md
scripts/: generate_markdown.py  pull_base_ui_components.py
src/: export.py  hooks.py  meta.py  routes.py  src.py
src/docs/: constants.py  generator.py  parser.py  style.py
src/templates/: docpage.py  drawer.py  footer.py  navbar.py  search.py  sidebar.py  toc.py
src/utils/: frontmatter.py
(+156 files in other folders)
