[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sapphire"
version = "0.3.3-beta"
description = "SapphireUI – The UI Library for Reflex Developers"
authors = [{ name = "sumangal karan", email = "sumangalkaran44@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.8.17",
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "typer>=0.12.3",
    "sapphire>=0.3.3b0"
    
    
]

[project.scripts]
sapphire = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
