[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/sapphireUI/SapphireUI"
Documentation = "https://sapphireui-blue-book.reflex.run/docs/getting-started/introduction"
Source = "https://github.com/sapphireUI/SapphireUI"
Issues = "https://github.com/sapphireUI/SapphireUI/issues"
[project]
name = "sapphireui"
version = "0.4.1"
description = "SapphireUI – The UI Library for Reflex Developers"
authors = [{ name = "sapphireUI", email = "sapphireui00@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.8.17",
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "typer>=0.12.3",
    "sapphireui>=0.3.3b0"
    
    
]

[project.scripts]
sapphireui = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
